--- a/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
@@ -2126,3 +2126,6 @@ Subject: Subject_1*/
 "business_app_contact_us_subject_6" = "Login/Signup";
 "business_app_contact_us_subject_7" = "Connection, Speed";
 "business_app_contact_us_subject_8" = "Suggestions (NT)";
+
+
+"business_app_icloud_upload_spinner_tag" = "Preparing iCloud items";
