--- a/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
@@ -2128,3 +2128,5 @@ Subject: Subject_1*/
 "business_app_contact_us_subject_8" = "Suggestions (NT)";
 "business_app_access_page_role_owner" = "Owner";
 "business_app_app_version_under_settings" = "Version: %@";
+"business_app_search_empty_page_title" = "No Results Found";
+"business_app_search_empty_page_description" = "Your search %@ did not match with any file or folder";
