--- a/Depo/LifeBox_Business/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/LifeBox_Business/App/Resources/tr.lproj/OurLocalizable.strings
@@ -1951,7 +1951,7 @@
 "business_app_info_page_item" = "Öğeler";
 "business_app_info_page_creation_date" = "Oluşturulma Tarihi";
 "business_app_info_page_modified_date" = "Son Düzenleme";
-"business_app_info_page_sharing_info" = "Paylaşım Bilgisi";
+"business_app_info_page_sharing_info" = "Erişim Bilgisi";
 "business_app_info_page_shared_with" = "%d Kişinin erişimi var";
 "business_app_info_page_role_owner" = "Paylaşan";
 "business_app_info_page_role_editor" = "Düzenleyen";
@@ -1964,8 +1964,8 @@
 "business_app_whohasaccess_role_viewer" = "Görüntüleyebilir";
 "business_app_whohasaccess_role_varies" = "Özelleşmiş";
 "uploadVideoToReadOnlyAlbumError" = "";
-"business_app_2FA_first_page_title" = "Olağandışı Giriş Denemesi Tespit Edildi";
-"business_app_2FA_first_page_description_title" = "Hesabınız için iki faktörlü kimlik doğrulamasını etkinleştirdiniz.";
+"business_app_2FA_first_page_title" = "Güvenlik Adımı";
+"business_app_2FA_first_page_description_title" = "Olağandışı Giriş Denemesi Tespit Edildi";
 "business_app_2FA_first_page_description_detail" = "Hesabınızı güvence altına almak ve güvenli bir şekilde giriş yapabilmeniz için kimliğinizi doğrulayabilmek adına size bir güvenlik kodu göndereceğiz.";
 "business_app_2FA_first_page_sendsecuritycode" = "Güvenlik kodunu gönder";
 "business_app_2FA_first_page_sendsecuritycode_to_phone" = "Telefon numarama:";
@@ -2090,11 +2090,12 @@
 "business_app_root_device_popup_description" = "Güvenlik nedeniyle root edilmiş cihazlarla bu uygulama kullanılamaz";
 "business_app_root_device_popup_button" = "Uygulamayı kapat";
 "business_app_manual_picker_selected_counter" = "%d Seçili";
-"turkcell_updater_pop_up_title" = "";
-"turkcell_updater_pop_up_description" = "";
+"turkcell_updater_pop_up_title" = "Uyarı";
+"turkcell_updater_pop_up_description" = "Lütfen uygulamayı AppStore'dan güncelleyin";
 "business_app_delete_success_snackbar_trashbin_link" = "Çöp Kutusu";
 "business_app_contact_us_subject_6" = "Giriş/Kayıt";
 "business_app_contact_us_subject_7" = "Bağlantı, Hız";
 "business_app_contact_us_subject_8" = "Öneriler (NT)";
-"business_app_access_page_role_owner" = "";
-"business_app_app_version_under_settings" = "";
+"business_app_access_page_role_owner" = "Paylaşan";
+"business_app_app_version_under_settings" = "Versiyon: %@";
+"business_app_icloud_upload_spinner_tag" = "";
