new header class Empty view channge
accurate setup of nnew header

+new tags

--- a/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
@@ -2131,3 +2131,5 @@ Subject: Subject_1*/
 "business_app_search_empty_page_title" = "No Results Found";
 "business_app_search_empty_page_description" = "Your search %@ did not match with any file or folder";
 "business_app_icloud_upload_spinner_tag" = "Preparing iCloud items";
+"business_app_search_number_of_result" = "Results: %d";
+"business_app_search_no_results" = "No results found for %@";
