--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -1840,3 +1840,10 @@
 "private_share_long_emailmsisdn" = "E-Posta veya GSM numarası karakter limitini aşıyor.";
 "private_share_start_max_number_of_users" = "Maksimum %d kişi ile paylaşım yapılabilir.";
 "private_share_max_number_of_item_limit_exceeded" = "Maksimum dosya paylaşım sınırı aşıldı.";
+
+/*Added manually*/
+"signup_redesign_eula_checkbox_desc" = "%1$S okudum ve onaylıyorum.";
+"signup_redesign_eula_link" = "Kullanıcı Sözleşmesi'ni";
+"signup_redesign_etk_checkbox_desc" = "%1$S metnini okudum ve kabul ediyorum.";
+"signup_redesign_etk_link" = "Ticari Elektronik İleti ve Veri İzni";
+"signup_redesign_eula_accept_button" = "Onaylıyorum";
