--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -1847,3 +1847,4 @@
 "signup_redesign_etk_checkbox_desc" = "%1$S metnini okudum ve kabul ediyorum.";
 "signup_redesign_etk_link" = "Ticari Elektronik İleti ve Veri İzni";
 "signup_redesign_eula_accept_button" = "Onaylıyorum";
+"invitation_home_card_button_title" = "Davet et";
