--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -1824,3 +1824,11 @@
 "private_share_long_emailmsisdn" = "Номер GSM або електронна пошта перевищує ліміт символів.";
 "private_share_start_max_number_of_users" = "Спільне використання може здійснюватися не більше ніж з %d людиною.";
 "private_share_max_number_of_item_limit_exceeded" = "Перевищено максимальний ліміт обміну файлами.";
+
+/*Added manually*/
+"signup_redesign_eula_checkbox_desc" = "";
+"signup_redesign_eula_link" = "";
+"signup_redesign_etk_checkbox_desc" = "";
+"signup_redesign_etk_link" = "";
+"signup_redesign_eula_accept_button" = "";
+"invitation_home_card_button_title" = "";
