--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -1822,3 +1822,11 @@
 "private_share_long_emailmsisdn" = "E-mail sau numărul GSM depășește limita de caractere.";
 "private_share_start_max_number_of_users" = "Partajarea se poate face cu maximum %d  persoane de contact.";
 "private_share_max_number_of_item_limit_exceeded" = "Limita maximă de partajare a fișierelor a fost depășită.";
+
+/*Added manually*/
+"signup_redesign_eula_checkbox_desc" = "";
+"signup_redesign_eula_link" = "";
+"signup_redesign_etk_checkbox_desc" = "";
+"signup_redesign_etk_link" = "";
+"signup_redesign_eula_accept_button" = "";
+"invitation_home_card_button_title" = "";
