--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -1865,3 +1865,11 @@
 "private_share_long_emailmsisdn" = "Numri i postës elektronike ose GSM tejkalon limitin e karakterit.";
 "private_share_start_max_number_of_users" = "Ndarja mund të bëhet me %d persona maksimalisht.";
 "private_share_max_number_of_item_limit_exceeded" = "Kufiri maksimal i ndarjes së skedarit është tejkaluar.";
+
+/*Added manually*/
+"signup_redesign_eula_checkbox_desc" = "";
+"signup_redesign_eula_link" = "";
+"signup_redesign_etk_checkbox_desc" = "";
+"signup_redesign_etk_link" = "";
+"signup_redesign_eula_accept_button" = "";
+"invitation_home_card_button_title" = "";
