--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1876,13 +1876,14 @@
 /*Added manually*/
 "signup_redesign_eula_checkbox_desc" = "I have read and accept %1$S";
 "signup_redesign_eula_link" = "Terms of Use";
-"signup_redesign_etk_checkbox_desc" = "I have read and accept the text of %1$S";
+"signup_redesign_etk_checkbox_desc" = "I have read and accepted the %1$S.";
 "signup_redesign_etk_link" = "Commercial Electronic Message and Data Permission";
 "signup_redesign_eula_accept_button" = "I Agree";
 "invitation_home_card_button_title" = "Invitation";
 
 /*Print redirection warning*/
-"warning_popup_print_redirect_title" = "Warning";
-"warning_popup_print_redirect_message" = "You are being redirected to an external website...";
-"warning_popup_print_redirect_proceed_button" = "Proceed";
+"warning_popup_print_redirect_title" = "You are being redirected to an external website";
+"warning_popup_print_redirect_message" = "You are being redirected o an external site in order to print your photos";
+"warning_popup_print_redirect_proceed_button" = "Continue";
 "warning_popup_print_redirect_cancel_button" = "Cancel";
+"settings_item_invitation" = "";
