--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -1824,11 +1824,11 @@
 "private_share_max_number_of_item_limit_exceeded" = "Maximale Grenze der Dateifreigabe überschritten.";
 
 /*Added manually*/
-"signup_redesign_eula_checkbox_desc" = "";
-"signup_redesign_eula_link" = "";
-"signup_redesign_etk_checkbox_desc" = "";
-"signup_redesign_etk_link" = "";
-"signup_redesign_eula_accept_button" = "";
+"signup_redesign_eula_checkbox_desc" = "%1$S habe ich gelesen und angenommen.";
+"signup_redesign_eula_link" = "Die Nutzungsbedingungen";
+"signup_redesign_etk_checkbox_desc" = "%1$S habe ich gelesen und angenommen.";
+"signup_redesign_etk_link" = "Kommerziell- elektronischer Nachrichten- und Datenerlaubnistext";
+"signup_redesign_eula_accept_button" = "Ich bestätige";
 "invitation_home_card_button_title" = "";
 
 /*Print redirection warning*/
@@ -1836,3 +1836,4 @@
 "warning_popup_print_redirect_message" = "";
 "warning_popup_print_redirect_proceed_button" = "";
 "warning_popup_print_redirect_cancel_button" = "";
+"settings_item_invitation" = "";
