--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -1866,11 +1866,11 @@
 "private_share_max_number_of_item_limit_exceeded" = "Maximale Grenze der Dateifreigabe überschritten.";
 
 /*Added manually*/
-"signup_redesign_eula_checkbox_desc" = "";
-"signup_redesign_eula_link" = "";
-"signup_redesign_etk_checkbox_desc" = "";
-"signup_redesign_etk_link" = "";
-"signup_redesign_eula_accept_button" = "";
+"signup_redesign_eula_checkbox_desc" = "He leído %1$S y lo acepto.";
+"signup_redesign_eula_link" = "A las Condiciones de Uso";
+"signup_redesign_etk_checkbox_desc" = "He leído %1$S y lo acepto.";
+"signup_redesign_etk_link" = "Al texto de permiso de datos y mensajes electrónicos comerciales";
+"signup_redesign_eula_accept_button" = "Confirmo";
 "invitation_home_card_button_title" = "";
 
 /*Print redirection warning*/
@@ -1878,3 +1878,4 @@
 "warning_popup_print_redirect_message" = "";
 "warning_popup_print_redirect_proceed_button" = "";
 "warning_popup_print_redirect_cancel_button" = "";
+"settings_item_invitation" = "";
