--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2132,11 +2132,11 @@ Please check I have understood the intended command here*/
 "private_share_max_number_of_item_limit_exceeded" = "Il a été dépassée la limite maximale de partage de fichier.";
 
 /*Added manually*/
-"signup_redesign_eula_checkbox_desc" = "";
-"signup_redesign_eula_link" = "";
-"signup_redesign_etk_checkbox_desc" = "";
-"signup_redesign_etk_link" = "";
-"signup_redesign_eula_accept_button" = "";
+"signup_redesign_eula_checkbox_desc" = "J'ai lu %1$S et je l'accepte.";
+"signup_redesign_eula_link" = "Les conditions d'utilisation";
+"signup_redesign_etk_checkbox_desc" = "J'ai lu %1$S et je l'accepte.";
+"signup_redesign_etk_link" = "Le message électronique commercial et texte d'autorisation de données";
+"signup_redesign_eula_accept_button" = "Je confirme";
 "invitation_home_card_button_title" = "";
 
 /*Print redirection warning*/
@@ -2144,3 +2144,4 @@ Please check I have understood the intended command here*/
 "warning_popup_print_redirect_message" = "";
 "warning_popup_print_redirect_proceed_button" = "";
 "warning_popup_print_redirect_cancel_button" = "";
+"settings_item_invitation" = "";
