--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -1838,11 +1838,11 @@
 "private_share_max_number_of_item_limit_exceeded" = "Превышен максимальный лимит обмена файлами.";
 
 /*Added manually*/
-"signup_redesign_eula_checkbox_desc" = "";
-"signup_redesign_eula_link" = "";
-"signup_redesign_etk_checkbox_desc" = "";
-"signup_redesign_etk_link" = "";
-"signup_redesign_eula_accept_button" = "";
+"signup_redesign_eula_checkbox_desc" = "Я прочитал и принимаю %1$S.";
+"signup_redesign_eula_link" = "Условия Использования";
+"signup_redesign_etk_checkbox_desc" = "Я прочитал и принимаю 1$S.";
+"signup_redesign_etk_link" = "Коммерческое Электронное Сообщение и Текст Подтверждения на Передачу Данных";
+"signup_redesign_eula_accept_button" = "Подтверждаю";
 "invitation_home_card_button_title" = "";
 
 /*Print redirection warning*/
@@ -1850,3 +1850,4 @@
 "warning_popup_print_redirect_message" = "";
 "warning_popup_print_redirect_proceed_button" = "";
 "warning_popup_print_redirect_cancel_button" = "";
+"settings_item_invitation" = "";
