--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -1867,11 +1867,11 @@
 "private_share_max_number_of_item_limit_exceeded" = "Kufiri maksimal i ndarjes së skedarit është tejkaluar.";
 
 /*Added manually*/
-"signup_redesign_eula_checkbox_desc" = "";
-"signup_redesign_eula_link" = "";
-"signup_redesign_etk_checkbox_desc" = "";
-"signup_redesign_etk_link" = "";
-"signup_redesign_eula_accept_button" = "";
+"signup_redesign_eula_checkbox_desc" = "%1$S Kam lexuar dhe e pranoj.";
+"signup_redesign_eula_link" = "Kushtet e Përdorimit";
+"signup_redesign_etk_checkbox_desc" = "%1$S Kam lexuar dhe e pranoj.";
+"signup_redesign_etk_link" = "Tekstin e Mesazhit Elektronik Komercial dhe Lejen e të Dhënave";
+"signup_redesign_eula_accept_button" = "Unë aprovoj";
 "invitation_home_card_button_title" = "";
 
 /*Print redirection warning*/
@@ -1879,3 +1879,4 @@
 "warning_popup_print_redirect_message" = "";
 "warning_popup_print_redirect_proceed_button" = "";
 "warning_popup_print_redirect_cancel_button" = "";
+"settings_item_invitation" = "";
