--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -1826,11 +1826,11 @@
 "private_share_max_number_of_item_limit_exceeded" = "Перевищено максимальний ліміт обміну файлами.";
 
 /*Added manually*/
-"signup_redesign_eula_checkbox_desc" = "";
-"signup_redesign_eula_link" = "";
-"signup_redesign_etk_checkbox_desc" = "";
-"signup_redesign_etk_link" = "";
-"signup_redesign_eula_accept_button" = "";
+"signup_redesign_eula_checkbox_desc" = "Прочитав і приймаю %1$S.";
+"signup_redesign_eula_link" = "Умови Експлуатації";
+"signup_redesign_etk_checkbox_desc" = "Прочитав і приймаю %1$S.";
+"signup_redesign_etk_link" = "Комерційне Електронне Повідомлення Та Текст Дозволу Обробки Даних";
+"signup_redesign_eula_accept_button" = "Погоджую";
 "invitation_home_card_button_title" = "";
 
 /*Print redirection warning*/
@@ -1838,3 +1838,4 @@
 "warning_popup_print_redirect_message" = "";
 "warning_popup_print_redirect_proceed_button" = "";
 "warning_popup_print_redirect_cancel_button" = "";
+"settings_item_invitation" = "";
