--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -1824,9 +1824,22 @@
 "private_share_max_number_of_item_limit_exceeded" = "Limita maximă de partajare a fișierelor a fost depășită.";
 
 /*Added manually*/
-"signup_redesign_eula_checkbox_desc" = "";
-"signup_redesign_eula_link" = "";
-"signup_redesign_etk_checkbox_desc" = "";
-"signup_redesign_etk_link" = "";
-"signup_redesign_eula_accept_button" = "";
+"signup_redesign_eula_checkbox_desc" = "Am citit și accept %1$S.";
+"signup_redesign_eula_link" = "Termeni de Utilizare";
+"signup_redesign_etk_checkbox_desc" = "Am citit și accept %1$S.";
+"signup_redesign_etk_link" = "Mesaj Electronic Comercial și Text De Autorizare A Datelor";
+"signup_redesign_eula_accept_button" = "Confirm";
 "invitation_home_card_button_title" = "";
+
+/*Print redirection warning*/
+"warning_popup_print_redirect_title" = "";
+"warning_popup_print_redirect_message" = "";
+"warning_popup_print_redirect_proceed_button" = "";
+"warning_popup_print_redirect_cancel_button" = "";
+"settings_item_invitation" = "";
+"title_invitation_campaign" = "";
+"title_invitation_link" = "";
+"title_invitation_friends" = "";
+"title_invitation_packages" = "";
+"invitation_snackbar_copy" = "";
+"invitation_share" = "";
