--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -1867,9 +1867,22 @@
 "private_share_max_number_of_item_limit_exceeded" = "Kufiri maksimal i ndarjes së skedarit është tejkaluar.";
 
 /*Added manually*/
-"signup_redesign_eula_checkbox_desc" = "";
-"signup_redesign_eula_link" = "";
-"signup_redesign_etk_checkbox_desc" = "";
-"signup_redesign_etk_link" = "";
-"signup_redesign_eula_accept_button" = "";
+"signup_redesign_eula_checkbox_desc" = "%1$S Kam lexuar dhe e pranoj.";
+"signup_redesign_eula_link" = "Kushtet e Përdorimit";
+"signup_redesign_etk_checkbox_desc" = "%1$S Kam lexuar dhe e pranoj.";
+"signup_redesign_etk_link" = "Tekstin e Mesazhit Elektronik Komercial dhe Lejen e të Dhënave";
+"signup_redesign_eula_accept_button" = "Unë aprovoj";
 "invitation_home_card_button_title" = "";
+
+/*Print redirection warning*/
+"warning_popup_print_redirect_title" = "";
+"warning_popup_print_redirect_message" = "";
+"warning_popup_print_redirect_proceed_button" = "";
+"warning_popup_print_redirect_cancel_button" = "";
+"settings_item_invitation" = "";
+"title_invitation_campaign" = "";
+"title_invitation_link" = "";
+"title_invitation_friends" = "";
+"title_invitation_packages" = "";
+"invitation_snackbar_copy" = "";
+"invitation_share" = "";
