--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2151,3 +2151,4 @@ Please check I have understood the intended command here*/
 "title_invitation_packages" = "";
 "invitation_snackbar_copy" = "";
 "invitation_share" = "";
+"invitation_friends" = "";
