DE-10722 -> References Google Analytics

--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -1844,3 +1844,5 @@
 "invitation_snackbar_copy" = "";
 "invitation_share" = "";
 "invitation_friends" = "";
+"invitation_snackbar_copy_exceed" = "";
+"invitation_snackbar_share_exceed" = "";
