--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -1846,3 +1846,5 @@
 "invitation_snackbar_copy" = "";
 "invitation_share" = "";
 "invitation_friends" = "";
+"invitation_snackbar_copy_exceed" = "";
+"invitation_snackbar_share_exceed" = "";
