--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -1843,18 +1843,20 @@
 "signup_redesign_etk_checkbox_desc" = "Я прочитал и принимаю 1$S.";
 "signup_redesign_etk_link" = "Коммерческое Электронное Сообщение и Текст Подтверждения на Передачу Данных";
 "signup_redesign_eula_accept_button" = "Подтверждаю";
-"invitation_home_card_button_title" = "";
+"invitation_home_card_button_title" = "Продолжить";
 
 /*Print redirection warning*/
-"warning_popup_print_redirect_title" = "";
-"warning_popup_print_redirect_message" = "";
-"warning_popup_print_redirect_proceed_button" = "";
-"warning_popup_print_redirect_cancel_button" = "";
-"settings_item_invitation" = "";
-"title_invitation_campaign" = "";
-"title_invitation_link" = "";
-"title_invitation_friends" = "";
-"title_invitation_packages" = "";
-"invitation_snackbar_copy" = "";
-"invitation_share" = "";
-"invitation_friends" = "";
+"warning_popup_print_redirect_title" = "Вы перенаправляетесь на другой сайт";
+"warning_popup_print_redirect_message" = "Вы перенаправляетесь на другой сайт для возможности распечатывания ваших фотографий";
+"warning_popup_print_redirect_proceed_button" = "Продолжить";
+"warning_popup_print_redirect_cancel_button" = "Отмена";
+"settings_item_invitation" = "Пригласи, Заработай & Зарабатывай";
+"title_invitation_campaign" = "Подробности Кампании";
+"title_invitation_link" = "Специальная для Вас Ссылка-Приглашение";
+"title_invitation_friends" = "Принявшие Ваше Приглашение (%d человек)";
+"title_invitation_packages" = "Заработанные Вами Подарки (%d Подарок)";
+"invitation_snackbar_copy" = "Пригласительная ссылка успешно скопирована";
+"invitation_share" = "Поделиться Ссылкой";
+"invitation_friends" = "Принявшие Ваше Приглашение";
+"invitation_snackbar_copy_exceed" = "";
+"invitation_snackbar_share_exceed" = "";
